error in filename

--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
     <div class="ui medium images">
         <img draggable="false" id="microsoft" src="images/microsoft.png">
         <img draggable="false" id="wsiia" src="images/wsiia.png">
-        <img draggable="false" id="mitml" src="images/mitml.pbg">
+        <img draggable="false" id="mitml" src="images/mitml.png">
         <img draggable="false" id="vsafe" src="images/vsafe.png">
         <img draggable="false" id="github" src="images/github.png">
     </div>
@@ -110,7 +110,7 @@
         <div class="content">
             <div class="left">
                 <a href="https://play.google.com/store/apps/details?id=com.wsiia">
-                    <img src="images/mitml.pbg">
+                    <img src="images/mitml.png">
                 </a>
             </div>
             <div class="right">
