--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,7 @@
         </div>
         <div class="content">
             <div class="left">
-                <a href="https://play.google.com/store/apps/details?id=com.wsiia">
+                <a href="http://media.mit.edu">
                     <img src="images/mitml.png">
                 </a>
             </div>
