forgot to hide projects

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Content -->
     <div class="centered content">
       <!-- About -->
-      <div class="ui hidden bodyContent about">
+      <div class="ui bodyContent about">
         <h3 class="ui red horizontal header divider">
           <i class="ui university icon"></i>
           School
@@ -79,7 +79,7 @@
       </div>
 
       <!-- Projects -->
-      <div class="ui bodyContent projects">
+      <div class="ui hidden bodyContent projects">
         <div class="wrap gallery">
           <a class="ui wrap segment" onclick="modals('microsoft')">
             <img src="images/microsoft.png" alt="Microsoft">
