egrave was the opposite way of eacute

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           Interests
         </h3>
         <p class="ui raised segment">
-          I love video games though I wish I had more time to play them. You can probably find me somewhere playing Pok&egrave;mon, Super Smash Brothers, or something from the Total War Series. If I had the time, I would go back to feeding my high school World of Warcraft addiction. I love watching sports; I really love Basketball because coming from San Antonio, all we have is the San Antonio Spurs. When I watch soccer, I cheer for the Seattle Sounders, and for football I cheer for America's Team the Cowboys (even though it hurts to watch sometimes).
+          I love video games though I wish I had more time to play them. You can probably find me somewhere playing Pok&eacute;mon, Super Smash Brothers, or something from the Total War Series. If I had the time, I would go back to feeding my high school World of Warcraft addiction. I love watching sports; I really love Basketball because coming from San Antonio, all we have is the San Antonio Spurs. When I watch soccer, I cheer for the Seattle Sounders, and for football I cheer for America's Team the Cowboys (even though it hurts to watch sometimes).
         </p>
         <h3 class="ui blue horizontal header divider">
           <i class="ui retro camera icon"></i>
