added box shadow

--- a/index.html
+++ b/index.html
@@ -81,34 +81,34 @@
       <!-- Projects -->
       <div class="ui hidden bodyContent projects">
         <div class="wrap gallery">
-          <a class="ui wrap segment" onclick="modals('microsoft')">
+          <a class="ui wrap raised segment" onclick="modals('microsoft')">
             <img src="images/microsoft.png" alt="Microsoft">
           </a>
         </div>
         <div class="wrap gallery">
-          <a class="ui wrap segment" onclick="modals('wsiia')">
+          <a class="ui wrap raised segment" onclick="modals('wsiia')">
             <img src="images/wsiia.png" alt="What song is it anyway">
           </a>
         </div>
         <div class="wrap gallery">
-          <a class="ui wrap segment" onclick="modals('mitml')">
+          <a class="ui wrap raised segment" onclick="modals('mitml')">
             <img src="images/mitml.png" alt="MIT Media Lab">
           </a>
         </div>
         <div class="wrap gallery">
-          <a class="ui wrap segment" onclick="modals('vsafe')">
+          <a class="ui wrap raised segment" onclick="modals('vsafe')">
             <img src="images/vsafe.png" alt="vSafe">
           </a>
         </div>
         <div class="wrap gallery">
-          <a class="ui wrap segment" onclick="modals('github')">
+          <a class="ui wrap raised segment" onclick="modals('github')">
             <img src="images/github.png" alt="github">
           </a>
         </div>
       </div>
 
       <!-- Resume -->
-      <div class="ui segment bodyContent hidden resume">
+      <div class="ui raised segment bodyContent hidden resume">
         <div id="resumeWrapper">
           <iframe id="resume" src="http://docs.google.com/gview?url=http://marquez.mit.edu/files/Resume.pdf&embedded=true" frameborder="0"></iframe>
         </div>
