Added more info to github modal

--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@
               <div class="ui header">E111077</div>
                 <p></p>
                 <p>This is <a class="link" href="https://www.github.com/e111077">my Github account.</a> The source of this website can be found as a public repository. You may also find code for related projects that I have worked on.</p>
+
+                <p>This site uses <a href="http://semantic-ui.com/">Semantic-UI</a>, <a href="http://jquery.com/">jQuery</a>, some Google fonts, MIT SIPB's <a href="http://scripts.mit.edu">Scripts</a> hosting service, and lots of love and procrastination. &lt;3.</p>
             </div>
           </div>
         </div>
