Href to shiftshark was accidentally relative

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           </div>
           <div class="content">
             <div class="ui medium image">
-              <a class="imageWrapper" href="shiftshark-aandre.rhcloud.com">
+              <a class="imageWrapper" href="http://shiftshark-aandre.rhcloud.com">
                 <img src="images/shiftshark.png">
               </a>
             </div>
@@ -144,7 +144,7 @@
               <p></p>
               <p>Shiftshark was a 5 week project for my software design class. I worked with my team of 4 to design, present, and implement our idea. ShiftShark is a scheduling application that attempts to focus on ease of use for employers and trading for employees.</p>
               <p>Technologies used in the project are MongoDB, MongooseJS, NodeJS, ExpressJS, PassportJS, HandlebarsJS, Embedded Javascript, MomentJS, fancyBox, and Semantic UI.</p>
-              <p>The site can be found <a href="shiftshark-aandre.rhcloud.com">here</a> and the source can be found <a href="https://github.com/shiftshark/shiftshark">here</a>.</p>
+              <p>The site can be found <a href="http://shiftshark-aandre.rhcloud.com">here</a> and the source can be found <a href="https://github.com/shiftshark/shiftshark">here</a>.</p>
             </div>
           </div>
         </div>
