--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="description">
               <div class="ui header">MIT <a href="http://student.mit.edu/catalog/m6a.html#6.170">6.170</a> Small Project</div>
               <p></p>
-              <p>Shiftshark was a 4 week project for my software design class. I worked with my team of 4 to design and implement our idea. Amazejobs is a job application task manager that was inspired by intern application season.</p>
+              <p>Amazejobs was a 4 week project for my software design class. I worked with my team of 4 to design and implement our idea. Amazejobs is a job application task manager that was inspired by intern application season.</p>
               <p>Technologies used in the project are MongoDB, MongooseJS, NodeJS, ExpressJS, HandlebarsJS, Embedded Javascript, MomentJS, Google OAuth, and Semantic UI.</p>
               <p>The site can be found <a href="http://amazejobs-hashrocket.rhcloud.com/">here</a> and the source can be found <a href="https://github.com/TeamHashrocket/AmazeJobs">here</a>.</p>
             </div>
