--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="lib/semantic/semantic.min.js"></script>
     <link rel="stylesheet" href="lib/semantic/semantic.min.css" type="text/css" />
     <!-- Fonts -->
-    <link href="http://fonts.googleapis.com/css?family=Lato:300|Open+Sans:400,700" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
     <!-- Styling -->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <!-- Angular Files -->
