Added labs section and direct PDF download

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <div id="resumeWrapper">
           <iframe id="resume" src="http://docs.google.com/gview?url=http://marquez.mit.edu/files/Resume.pdf&embedded=true" frameborder="0"></iframe>
         </div>
+        <div>Direct download <a href="/files/Resume.pdf">here</a>.</div>
         <div id="lastUpdated"></div> 
       </div>
 
@@ -110,7 +111,7 @@
           <div class="content">
             <div class="ui medium image">
               <a class="imageWrapper" href="{{project.link}}">
-                <img ng-src="{{project.img}}">
+                <img ng-src="{{project.img}}">r
               </a>
             </div>
             <div class="description">
