--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <div class="content">
             <div class="ui medium image">
               <a class="imageWrapper" href="{{project.link}}">
-                <img ng-src="{{project.img}}">r
+                <img ng-src="{{project.img}}">
               </a>
             </div>
             <div class="description">
