Added google internship & about me

--- a/index.html
+++ b/index.html
@@ -58,14 +58,18 @@
           School
         </h3>
         <p class="ui raised segment">
-          Hello, my name is Elliott Marquez. I am a junior at the <a href="http://web.mit.edu">Massachusetts Institute of Technology</a> living in <a href="http://simmons.mit.edu">Simmons Hall</a>. I was born and raised in San Antonio, Texas. There, I attended <a href="http://www.nisd.net/schools/info/6">Northside Health Careers High School</a>; a health-oriented magnet school ranked top in the city and top 150 nationally. Though I spent years learning medical skills and interning at area hospitals, I soon learned that my true passion was in mathematics and engineering. I spent over seven years in both middle school and high school taking part in state mathematics competitions and three years in state Latin competitions specializing in Roman History.
+          Hello, my name is Elliott Marquez. I am a senior at the <a href="http://web.mit.edu">Massachusetts Institute of Technology</a> living in <a href="http://simmons.mit.edu">Simmons Hall</a>. I was born and raised in San Antonio, Texas. There, I attended <a href="http://www.nisd.net/schools/info/6">Northside Health Careers High School</a>; a health-oriented magnet school ranked top in the city and top 150 nationally. Though I spent years learning medical skills and interning at area hospitals, I soon learned that my true passion was in mathematics and engineering. I spent over seven years in both middle school and high school taking part in state mathematics competitions and in state Latin competitions specializing in Roman History.
         </p>
         <h3 class="ui green horizontal header divider">
           <i class="ui game icon"></i>
           Interests
         </h3>
         <p class="ui raised segment">
-          I love video games though I wish I had more time to play them. You can probably find me somewhere playing Pok&eacute;mon, Super Smash Brothers, or something from the Total War Series. If I had the time, I would go back to feeding my high school World of Warcraft addiction. I love watching sports; I really love Basketball because coming from San Antonio, all we have is the San Antonio Spurs. When I watch soccer, I cheer for the Seattle Sounders, and for football I cheer for America's Team the Cowboys (even though it hurts to watch sometimes).
+          I love video games though I wish I had more time to play them. You can probably find me somewhere playing Pok&eacute;mon, Super Smash Brothers, or something from the Total War Series (and when I say something I mean all of them). Had I the time and bottomless wallet, I would go back to feeding my World of Warcraft addiction. I love watching sports; I'm bad at them (like, really bad), but being an armchair coach is my specialty! I really love Basketball because coming from San Antonio, all we have is the San Antonio Spurs. When I watch soccer, I cheer for the Seattle Sounders, and for football I cheer for the Cowboys (even though it hurts to watch sometimes).
+          <br><br>
+          If you want to talk games, tech, musicals, debate whether Marius > Caesar, Kirk > Picard, Intellij > Eclipse, dogs > cats, or just want to chat, hit me up on <a href="https://twitter.com/Elliott_Marquez">my Twitter handle</a>. It may look dead, but I check it all the time!
+          <br><br>
+          P.S. the answers to those debates are yes.
         </p>
         <h3 class="ui blue horizontal header divider">
           <i class="ui retro camera icon"></i>
@@ -77,7 +81,7 @@
               <img alt="Photo of Elliott" src="images/profile.jpg">
             </a>
             <div class="ui bottom right attached label">
-              Photo by the amazing <a href="http://anniej.mit.edu/">Annie Jiao</a>.
+              Photo by the amazing <a href="http://andreaboulian.com/">Andre Aboulian</a>.
             </div>
           </div>
         </div>
@@ -95,9 +99,9 @@
       <!-- Resume -->
       <div class="ui raised segment bodyContent hidden resume">
         <div id="resumeWrapper">
-          <iframe id="resume" src="http://docs.google.com/gview?url=http://marquez.mit.edu/files/Resume.pdf&embedded=true" frameborder="0"></iframe>
+          <iframe id="resume" src="http://docs.google.com/gview?url=http://marquez.mit.edu/files/resume.pdf&embedded=true" frameborder="0"></iframe>
         </div>
-        <div>Direct download <a href="/files/Resume.pdf">here</a>.</div>
+        <div>Direct download <a href="/files/resume.pdf">here</a>.</div>
         <div id="lastUpdated"></div> 
       </div>
 
