--- a/meyer.html
+++ b/meyer.html
@@ -49,4 +49,15 @@
     <img src="images/meCreepy.jpg">
     <div id="more" class="wrap"><span style="color:#ff0000;">Y</span><span style="color:#ff2000;">O</span><span style="color:#ff4000;">U</span><span style="color:#ff5f00;"> </span><span style="color:#ff7f00;">W</span><span style="color:#ff9900;">A</span><span style="color:#ffb200;">N</span><span style="color:#ffcc00;">T</span><span style="color:#ffe500;">E</span><span style="color:#ffff00;">D</span><span style="color:#bfff00;"> </span><span style="color:#80ff00;">T</span><span style="color:#40ff00;">O</span><span style="color:#00ff00;"> </span><span style="color:#00ff33;">S</span><span style="color:#00ff66;">E</span><span style="color:#00ff99;">E</span><span style="color:#00ffcc;"> </span><span style="color:#00ffff;">M</span><span style="color:#00bfff;">O</span><span style="color:#0080ff;">R</span><span style="color:#0040ff;">E</span><span style="color:#0000ff;">?</span></div>
   </a>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-49979467-3', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </body>
