finished top-bar

--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
   <link rel="icon" type="image/ico" href="img/favicon.ico">
   <script src="../webcomponentsjs/webcomponents.min.js"></script>
   <link rel="import" href="../polymer/polymer.html">
+  <link rel="import" href="personal-site.html">
+  <style>
+    @font-face {
+      font-family: ElliScript;
+      src: url(files/ElliScript.ttf);
+    }
+
+    body {
+      margin: 0 0 0 0;
+      height: 10000px;
+      min-width: 790px;
+    }
+  </style>
 </head>
 <body>
-
+  <personal-site></personal-site>
 </body>
 </html>
