--- a/main-page.html
+++ b/main-page.html
@@ -2,11 +2,13 @@
 <link rel="import" href="about-me.html">
 <link rel="import" href="my-projects.html">
 <link rel="import" href="project-popup.html">
+<link rel="import" href="resume-section.html">
 
 <link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../app-route/app-location.html">
 <link rel="import" href="../app-route/app-route.html">
 <link rel="import" href="../neon-animation/neon-animated-pages.html">
+<link rel="import" href="../iron-resizable-behavior/iron-resizable-behavior.html">
 
 <dom-module id="main-page">
 <template>
@@ -52,19 +54,23 @@
   <div id="mainContent">
     <about-me age="{{age}}" pc="{{pc}}"></about-me>
     <div class="separator"></div>
-    <neon-animated-pages on-neon-animation-finish="_onNeonAnimationFinish"
-        id="projectsSection"
-        attr-for-selected="name"
-        selected="[[selectedPage.name]]">
-      <my-projects
-          name="main"
-          projects="[[projects]]">
-      </my-projects>
-      <project-popup
-          name="project"
-          project="[[selectedProject]]">
-      </project-popup>
-    </neon-animated-pages>
+    <div id="projectsSection">
+      <neon-animated-pages on-neon-animation-finish="_onNeonAnimationFinish"
+          attr-for-selected="name"
+          selected="[[selectedPage.name]]">
+        <my-projects
+            name="main"
+            id="myProjects"
+            projects="[[projects]]">
+        </my-projects>
+        <project-popup
+            name="project"
+            project="[[selectedProject]]">
+        </project-popup>
+      </neon-animated-pages>
+    </div>
+    <div class="separator"></div>
+    <resume-section last-updated="[[lastUpdated]]"></resume-section>
   </div>
 </template>
 
@@ -72,7 +78,14 @@
   Polymer({
     is: 'main-page',
 
+    behaviors: [Polymer.IronResizableBehavior],
+
     properties: {
+      lastUpdated: {
+        type: Number,
+        value: "September 2015"
+      },
+
       age: {
         type: Number,
         value: 22
@@ -175,7 +188,8 @@
 
     listeners: {
       'project-tap': '_onProjectTap',
-      'close-popup': '_onClosePopup'
+      'close-popup': '_onClosePopup',
+      'iron-resize': '_onProjectsResize'
     },
 
     observers: [
@@ -201,8 +215,14 @@
     },
 
     _onNeonAnimationFinish: function() {
-      // debugger;
       document.body.scrollTop = this.$.projectsSection.offsetTop;
+    },
+
+    _onProjectsResize: function() {
+      var height = this.$.myProjects.$.fullContentWrapper.offsetHeight;
+      if (height != 0) {
+        this.$.projectsSection.style.height = height + "px";
+      }
     }
   });
 </script>
