--- a/my-projects.html
+++ b/my-projects.html
@@ -4,6 +4,25 @@
 <link rel="import" href="../neon-animation/neon-shared-element-animatable-behavior.html">
 <link rel="import" href="../neon-animation/animations/hero-animation.html">
 <link rel="import" href="../neon-animation/animations/ripple-animation.html">
+<link rel="import" href="../iron-resizable-behavior/iron-resizable-behavior.html">
+
+<dom-module id="iron-resizable">
+  <template>
+    <style>
+      :host {
+        display: block;
+      }
+    </style>
+    <content></content>
+  </template>
+  <script>
+    Polymer({
+      is: 'iron-resizable',
+
+      behaviors: [Polymer.IronResizableBehavior]
+    });
+  </script>
+</dom-module>
 
 <dom-module id="my-projects">
 <template>
@@ -27,21 +46,18 @@
       @apply(--layout-center-justified);
       @apply(--layout-wrap);
     }
-
-    .contentWrapper span {
-      margin: auto;
-    }
   </style>
-  
-  <div class="big title">
-    Projects
-  </div>
+  <iron-resizable id="fullContentWrapper">
+    <div class="big title">
+      Projects
+    </div>
 
-  <div class="contentWrapper">
-    <template is="dom-repeat" items="[[projectsArray]]"" as="project">
-      <project-card data="[[project]]"></project-card>
-    </template>
-  </div>
+    <div class="contentWrapper">
+      <template is="dom-repeat" items="[[projectsArray]]"" as="project">
+        <project-card data="[[project]]"></project-card>
+      </template>
+    </div>
+  </iron-resizable>
 </template>
 <script>
   Polymer({
