--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Elliott Marquez</title>
   <link rel="icon" type="image/ico" href="img/favicon.ico">
   <script src="../webcomponentsjs/webcomponents.min.js"></script>
-  <link rel="import" href="../polymer/polymer.html">
+  <link rel="import" href="bower_components/polymer/polymer.html">
   <link rel="import" href="main-page.html">
   <style>
     @font-face {
