--- a/my-projects.html
+++ b/my-projects.html
@@ -1,10 +1,10 @@
 <link rel="import" href="project-card.html">
 
-<link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
-<link rel="import" href="../neon-animation/neon-shared-element-animatable-behavior.html">
-<link rel="import" href="../neon-animation/animations/hero-animation.html">
-<link rel="import" href="../neon-animation/animations/ripple-animation.html">
-<link rel="import" href="../iron-resizable-behavior/iron-resizable-behavior.html">
+<link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
+<link rel="import" href="bower_components/neon-animation/animations/hero-animation.html">
+<link rel="import" href="bower_components/neon-animation/animations/ripple-animation.html">
+<link rel="import" href="bower_components/iron-resizable-behavior/iron-resizable-behavior.html">
 
 <dom-module id="iron-resizable">
   <template>
