--- a/project-popup.html
+++ b/project-popup.html
@@ -1,9 +1,9 @@
-<link rel="import" href="../neon-animation/neon-shared-element-animatable-behavior.html">
-<link rel="import" href="../neon-animation/animations/hero-animation.html">
-<link rel="import" href="../neon-animation/animations/ripple-animation.html">
-<link rel="import" href="../neon-animation/animations/fade-out-animation.html">
-<link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
-<link rel="import" href="../iron-image/iron-image.html">
+<link rel="import" href="bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
+<link rel="import" href="bower_components/neon-animation/animations/hero-animation.html">
+<link rel="import" href="bower_components/neon-animation/animations/ripple-animation.html">
+<link rel="import" href="bower_components/neon-animation/animations/fade-out-animation.html">
+<link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="bower_components/iron-image/iron-image.html">
 
 
 <dom-module id="project-popup">
