--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Elliott Marquez</title>
   <link rel="icon" type="image/ico" href="img/favicon.ico">
-  <script src="../webcomponentsjs/webcomponents.min.js"></script>
+  <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
   <link rel="import" href="bower_components/polymer/polymer.html">
   <link rel="import" href="main-page.html">
   <style>
